Attempt to CI-test OpenCL backend and LIBSMM.

--- a/.ci/daint.cscs.ch/Jenkinsfile
+++ b/.ci/daint.cscs.ch/Jenkinsfile
@@ -59,6 +59,20 @@ pipeline {
                         }
                     }
                 }
+                stage("OpenCL") {
+                    stages {
+                        stage('build') {
+                            steps {
+                                run_batch("0:15:00", "ocl", "build")
+                            }
+                        }
+                        stage('test') {
+                            steps {
+                                run_batch("1:00:00", "ocl", "test")
+                            }
+                        }
+                    }
+                }
                 stage("Intel") {
                     stages {
                         stage('build') {
