Disabled Daint-CI runtime tests (temporarily). Prepared revised transpose kernel.
* Replaced OPENCL_LIBSMM_TRANS_WGSIZE in favor of OPENCL_LIBSMM_TRANS_BLOCK_M.
* Sanitize command line arguments similar to acc_bench_smm.
* Folded inplace-transpose into general transpose.cl.

--- a/src/acc/opencl/smm/CMakeLists.txt
+++ b/src/acc/opencl/smm/CMakeLists.txt
@@ -5,8 +5,7 @@ set(LIBSMM_ACC_HEADER_FILES opencl_libsmm.h ${LIBSMM_ACC_HEADER_KERNELS})
 set(LIBSMM_ACC_FILES ${LIBSMM_ACC_SRC_FILES} ${LIBSMM_ACC_HEADER_FILES})
 
 set(SMM_ACC_KERNEL_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/../acc_opencl.sh)
-set(SMM_ACC_KERNELS kernels/multiply.cl kernels/transpose.cl
-                    kernels/transpose_inplace.cl)
+set(SMM_ACC_KERNELS kernels/multiply.cl kernels/transpose.cl)
 list(TRANSFORM SMM_ACC_KERNELS PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/)
 
 if (USE_ACCEL MATCHES "opencl")
