Sprinkle REQUIRED and make OpenCL require libxsmm

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,7 +152,7 @@ add_library(dbcsr ${DBCSR_SRCS})
 set_target_properties(dbcsr PROPERTIES VERSION ${dbcsr_VERSION}
                                        SOVERSION ${dbcsr_APIVERSION})
 
-if (LIBXSMM_FOUND)
+if (USE_SMM MATCHES "libxsmm")
   target_compile_definitions(dbcsr PRIVATE __LIBXSMM)
   target_link_libraries(dbcsr PRIVATE PkgConfig::LIBXSMM)
 endif ()
