Simplify the CMake ROCm detection (#419)
Simplify detecting ROCm in CMake. Resolved #261 by prefixing ACC interface/functions (c_dbcsr_).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,16 +15,11 @@ endif ()
 
 # =================================== DBCSR PERF TESTS
 set(DBCSR_PERF_SRCS dbcsr_performance_driver.F dbcsr_performance_multiply.F)
-if (USE_ACCEL MATCHES "hip")
-  hip_add_executable(dbcsr_perf ${DBCSR_PERF_SRCS})
-else ()
-  add_executable(dbcsr_perf ${DBCSR_PERF_SRCS})
-endif ()
+add_executable(dbcsr_perf ${DBCSR_PERF_SRCS})
 target_link_libraries(dbcsr_perf dbcsr)
 set_target_properties(dbcsr_perf PROPERTIES LINKER_LANGUAGE Fortran)
-if (OpenMP_FOUND)
-  target_link_libraries(dbcsr_perf OpenMP::OpenMP_Fortran)
-endif ()
+target_link_libraries(dbcsr_perf
+                      $<$<BOOL:${USE_OPENMP}>:OpenMP::OpenMP_Fortran>)
 
 file(
   GLOB DBCSR_PERF_TESTS
@@ -66,11 +61,8 @@ set(DBCSR_TESTS_FTN
     dbcsr_tas_unittest
     dbcsr_test_csr_conversions)
 
-if (NOT USE_ACCEL STREQUAL "")
-  # TODO: enable dbcsr_acc_test for HIP
-  if (NOT USE_ACCEL MATCHES "hip")
-    set(DBCSR_TESTS_C dbcsr_acc_test_c)
-  endif ()
+if (USE_ACCEL)
+  set(DBCSR_TESTS_C dbcsr_acc_test_c)
 endif ()
 
 if (NOT (CMAKE_Fortran_COMPILER_ID STREQUAL "Cray"))
@@ -114,11 +106,7 @@ target_link_libraries(dbcsr_unittest_common PUBLIC dbcsr)
 
 # Compile Fortran tests
 foreach (dbcsr_test ${DBCSR_TESTS_FTN})
-  if (USE_ACCEL MATCHES "hip")
-    hip_add_executable(${dbcsr_test} ${${dbcsr_test}_SRCS})
-  else ()
-    add_executable(${dbcsr_test} ${${dbcsr_test}_SRCS})
-  endif ()
+  add_executable(${dbcsr_test} ${${dbcsr_test}_SRCS})
   target_link_libraries(${dbcsr_test} dbcsr_unittest_common)
   set_target_properties(${dbcsr_test} PROPERTIES LINKER_LANGUAGE Fortran)
   # register unittest executable with CMake
@@ -172,12 +160,8 @@ if (WITH_C_API)
   endforeach ()
 
   foreach (dbcsr_test_c ${DBCSR_TESTS_C})
-    if (USE_ACCEL MATCHES "hip")
-      hip_add_executable(${dbcsr_test_c} ${${dbcsr_test_c}_SRCS})
-    else ()
-      add_executable(${dbcsr_test_c} ${${dbcsr_test_c}_SRCS})
-    endif ()
-    target_link_libraries(${dbcsr_test_c} dbcsr_c)
+    add_executable(${dbcsr_test_c} ${${dbcsr_test_c}_SRCS})
+    target_link_libraries(${dbcsr_test_c} dbcsr_c dbcsr)
     # register unittest executable with CMake
     if (USE_MPI)
       separate_arguments(MPIEXEC_PREFLAGS)
@@ -204,8 +188,8 @@ file(RELATIVE_PATH CURRENT_BINARY_DIR_RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/..
      ${CMAKE_CURRENT_BINARY_DIR})
 
 # libsmm_acc_unittest_multiply
-add_custom_command(
-  OUTPUT libsmm_acc_unittest_multiply.cpp
+add_custom_target(
+  generate_libsmm_acc_unittest_multiply_test_cpp
   COMMAND
     ${Python_EXECUTABLE}
     ${CMAKE_CURRENT_SOURCE_DIR}/generate_libsmm_acc_unittest_multiply.py
@@ -213,13 +197,12 @@ add_custom_command(
     ${CURRENT_BINARY_DIR_RELATIVE} --gpu_version=${WITH_GPU}
   DEPENDS libsmm_acc_unittest_multiply.cpp.template
           generate_libsmm_acc_unittest_multiply.py
+  BYPRODUCTS libsmm_acc_unittest_multiply.cpp
   COMMENT "Generate tests/libsmm_acc_unittest_multiply.cpp")
-add_custom_target(generate_libsmm_acc_unittest_multiply_test_cpp
-                  DEPENDS libsmm_acc_unittest_multiply.cpp)
 
 # libsmm_acc_timer_multiply
-add_custom_command(
-  OUTPUT libsmm_acc_timer_multiply.cpp
+add_custom_target(
+  generate_libsmm_acc_timer_multiply_test_cpp
   COMMAND
     ${Python_EXECUTABLE}
     ${CMAKE_CURRENT_SOURCE_DIR}/generate_libsmm_acc_timer_multiply.py --base_dir
@@ -227,9 +210,8 @@ add_custom_command(
     --gpu_version=${WITH_GPU}
   DEPENDS libsmm_acc_timer_multiply.cpp.template
           generate_libsmm_acc_timer_multiply.py
-  COMMENT "Generate tests/libsmm_acc_unittest_transpose.cpp")
-add_custom_target(generate_libsmm_acc_timer_multiply_test_cpp
-                  DEPENDS libsmm_acc_timer_multiply.cpp)
+  BYPRODUCTS libsmm_acc_timer_multiply.cpp
+  COMMENT "Generate tests/generate_libsmm_acc_timer_multiply.cpp")
 
 if (USE_ACCEL MATCHES "cuda|hip")
 
@@ -239,73 +221,21 @@ if (USE_ACCEL MATCHES "cuda|hip")
       ${CMAKE_CURRENT_BINARY_DIR}/libsmm_acc_timer_multiply.cpp
       libsmm_acc_unittest_transpose.cpp)
 
-  # Tests that need no additional arguments to be run
-  set(LIBSMM_ACC_NOARG_TESTS libsmm_acc_unittest_multiply
-                             libsmm_acc_unittest_transpose)
-
   # Add executables for all libsmm_acc tests
-  if (USE_ACCEL MATCHES "cuda")
-
-    foreach (libsmm_acc_test ${LIBSMM_ACC_TESTS_SRCS})
-
-      get_filename_component(libsmm_acc_test_name ${libsmm_acc_test} NAME_WE)
-
-      add_executable(${libsmm_acc_test_name} ${libsmm_acc_test})
-      target_compile_definitions(${libsmm_acc_test_name} PRIVATE __CUDA)
-      target_include_directories(
-        ${libsmm_acc_test_name}
-        PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
-
-      target_link_libraries(${libsmm_acc_test_name} dbcsr)
-
-      if (OpenMP_FOUND)
-        target_link_libraries(${libsmm_acc_test_name} OpenMP::OpenMP_CXX)
-      endif ()
-
-    endforeach ()
-
-  elseif (USE_ACCEL MATCHES "hip")
-
-    foreach (libsmm_acc_test ${LIBSMM_ACC_TESTS_SRCS})
-      set_source_files_properties(${libsmm_acc_test}
-                                  PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
-
-      get_filename_component(libsmm_acc_test_name ${libsmm_acc_test} NAME_WE)
-
-      hip_add_executable(${libsmm_acc_test_name} ${libsmm_acc_test})
-      target_link_options(${libsmm_acc_test_name} PRIVATE ${HIP_ARCH_FLAGS})
-
-      target_link_libraries(${libsmm_acc_test_name} dbcsr)
-      target_compile_definitions(${libsmm_acc_test_name} PRIVATE __HIP)
-
-    endforeach ()
-
-    # Workaround issue in hip_add_library: explicitely write dependency between
-    # the test executable and the generated test c++ source file
-    add_dependencies(libsmm_acc_unittest_multiply
-                     generate_libsmm_acc_unittest_multiply_test_cpp)
-    add_dependencies(libsmm_acc_timer_multiply
-                     generate_libsmm_acc_timer_multiply_test_cpp)
-
-    foreach (libsmm_acc_test ${LIBSMM_ACC_TESTS_SRCS})
-
-      get_filename_component(libsmm_acc_test_name ${libsmm_acc_test} NAME_WE)
-      target_compile_definitions(${libsmm_acc_test_name} PRIVATE __HIP)
-      target_include_directories(${libsmm_acc_test_name}
-                                 PRIVATE ${HIP_PATH}/../include)
-
-      target_link_libraries(${libsmm_acc_test_name} dbcsr)
-
-    endforeach ()
-
-  endif ()
-
-  # Add tests that do not need additional arguments
-  foreach (libsmm_acc_test ${LIBSMM_ACC_NOARG_TESTS})
-    add_test(NAME ${libsmm_acc_test} COMMAND ${libsmm_acc_test})
+  foreach (libsmm_acc_test ${LIBSMM_ACC_TESTS_SRCS})
+    get_filename_component(libsmm_acc_test_name ${libsmm_acc_test} NAME_WE)
+    add_executable(${libsmm_acc_test_name} ${libsmm_acc_test})
+    target_compile_definitions(
+      ${libsmm_acc_test_name} PRIVATE $<$<STREQUAL:${USE_ACCEL},hip>:__HIP>
+                                      $<$<STREQUAL:${USE_ACCEL},cuda>:__CUDA>)
+    target_link_libraries(${libsmm_acc_test_name} dbcsr
+                          $<$<STREQUAL:${USE_ACCEL},hip>:hip::host> libsmm_acc)
   endforeach ()
 
-  # Add tests needing additional arguments:
+  add_test(NAME libsmm_acc_unittest_multiply
+           COMMAND libsmm_acc_unittest_multiply)
+  add_test(NAME libsmm_acc_unittest_transpose
+           COMMAND libsmm_acc_unittest_transpose)
   add_test(NAME libsmm_acc_timer_multiply-autotuned
            COMMAND libsmm_acc_timer_multiply autotuned)
   add_test(NAME libsmm_acc_timer_multiply-predicted
