--- a/tests/libsmm_acc_unittest_multiply.cpp.template
+++ b/tests/libsmm_acc_unittest_multiply.cpp.template
@@ -11,9 +11,8 @@
 #include <stdlib.h>
 #include <vector>
 #include <array>
-#include "../src/acc/libsmm_acc/libsmm_acc_benchmark.h"
-#include "../src/acc/libsmm_acc/libsmm_acc.h"
-#include "../src/acc/libsmm_acc/parameters.h"
+#include "libsmm_acc_benchmark.h"
+#include "libsmm_acc.h"
 
 
 /****************************************************************************\
