Periodically build the ROCm Docker image

--- a/.github/workflows/docker-build-env.yml
+++ b/.github/workflows/docker-build-env.yml
@@ -41,3 +41,18 @@ jobs:
           workdir: tools/docker
           dockerfile: Dockerfile.build-env-latest-gcc
           tags: "latest"
+
+  docker-build-env-rocm:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Publish Gitlab Image
+        uses: elgohr/Publish-Docker-Github-Action@2.12
+        with:
+          name: dbcsr/build-env-rocm-ubuntu-20.04
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          workdir: tools/docker
+          dockerfile: Dockerfile.build-env-rocm
+          tags: "latest"
