--- a/.github/workflows/testing-gcc.yml
+++ b/.github/workflows/testing-gcc.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        fetch-depth: 0
         submodules: true
 
     - name: Configure
