Append -Wno-error to compile-flags to potentially counter -Werror for certain translation units (MPI/legacy related rank-mismatches).

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,6 +15,11 @@ foreach (dbcsr_program_src ${DBCSR_PROGRAM_SRCS_FTN})
                                                          Fortran)
 endforeach ()
 
+# override -Werror for certain translation units
+if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
+  set_source_files_properties(dbcsr_tensor_example_1.F PROPERTIES COMPILE_FLAGS -Wno-error)
+endif ()
+
 # Compile C++ examples
 if (WITH_C_API)
   foreach (dbcsr_program_src ${DBCSR_PROGRAM_SRCS_CPP})
