--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -135,6 +135,11 @@ foreach (dbcsr_src ${DBCSR_FORTRAN_SRCS})
     ${dbcsr_src} PROPERTIES COMPILE_DEFINITIONS __SHORT_FILE__="${short_file}")
 endforeach ()
 
+# override -Werror for certain translation units
+if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
+  set_source_files_properties(mpi/dbcsr_mpiwrap.F PROPERTIES COMPILE_FLAGS -Wno-error)
+endif ()
+
 set(DBCSR_SRCS ${DBCSR_FORTRAN_SRCS})
 
 if (USE_ACCEL MATCHES "cuda")
