Apply -Wno-error only in case of GCC 10 (and later).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,7 +136,8 @@ foreach (dbcsr_src ${DBCSR_FORTRAN_SRCS})
 endforeach ()
 
 # override -Werror for certain translation units
-if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
+if ((CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
+    AND (CMAKE_Fortran_COMPILER_VERSION VERSION_GREATER_EQUAL 10))
   set_source_files_properties(mpi/dbcsr_mpiwrap.F PROPERTIES COMPILE_FLAGS
                                                              -Wno-error)
 endif ()
