--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,7 +96,7 @@ set(USE_ACCEL
 set_property(CACHE USE_ACCEL PROPERTY STRINGS "" opencl cuda hip)
 
 set(SUPPORTED_CUDA_ARCHITECTURES K20X K40 K80 P100 V100)
-set(SUPPORTED_HIP_ARCHITECTURES Mi50)
+set(SUPPORTED_HIP_ARCHITECTURES Mi50 Mi100)
 set(WITH_GPU
     "P100"
     CACHE STRING
@@ -203,6 +203,7 @@ if (USE_ACCEL MATCHES "cuda|hip")
   set(GPU_ARCH_NUMBER_P100 60)
   set(GPU_ARCH_NUMBER_V100 70)
   set(GPU_ARCH_NUMBER_Mi50 gfx906)
+  set(GPU_ARCH_NUMBER_Mi100 gfx908)
 endif ()
 
 if (USE_ACCEL MATCHES "cuda")
