--- a/tools/docker/Dockerfile.build-env-rocm
+++ b/tools/docker/Dockerfile.build-env-rocm
@@ -1,43 +1,49 @@
-FROM rocm/dev-ubuntu-18.04:latest
+FROM rocm/dev-ubuntu-20.04:latest
 
-# install compilers, libraries & co
-RUN apt-get update
-RUN apt-get install -y \
+ENV DEBIAN_FRONTEND=noninteractive
+
+RUN set -ex && \
+    apt-get update \
+    && apt-get install -y \
+        apt-transport-https \
+        ca-certificates \
+        gnupg \
+        software-properties-common \
+        curl \
+    && curl -LsS https://apt.kitware.com/keys/kitware-archive-latest.asc \
+        | gpg --dearmor - \
+        | tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null \
+    && apt-add-repository 'deb https://apt.kitware.com/ubuntu/ focal main' \
+    && apt-get install -y \
         locales \
         gfortran \
-        gcc-7 \
-        g++-7 \
-        llvm-7-dev \
-        llvm-7-tools \
+        g++ \
+        openmpi-bin \
+        libopenmpi-dev \
         mpich \
-        libomp-7-dev \
         libmpich-dev \
-        libopenblas-dev \
-        wget
-
-# install rocm libraries
-RUN wget -q -O - http://repo.radeon.com/rocm/rocm.gpg.key | sudo apt-key add -
-RUN echo 'deb [arch=amd64] http://repo.radeon.com/rocm/apt/debian/ xenial main' | sudo tee /etc/apt/sources.list.d/rocm.list
-RUN apt-get update
-RUN apt-get install -y \
-        rocm-dev \
+        libopenblas-openmp-dev \
+        cmake \
+        ninja-build \
+        lcov \
+        pkg-config \
+        git \
+        python3-pip \
+        rsync \
+        valgrind \
+    && apt-get install -y \
         rocblas \
         rocsolver \
-        hipblas
+        hipblas \
+    && rm -rf /var/lib/apt/lists/* \
+    && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 
-# install git 2.18+
-RUN apt-get install -y software-properties-common
-RUN add-apt-repository ppa:git-core/ppa
-RUN apt-get install -y git
+# Make sure we have a proper unicode locale and language
+ENV LANG en_US.utf8
 
-# install ninja
-RUN apt-get install -y wget
-RUN wget https://github.com/Kitware/ninja/releases/download/v1.10.0.gfb670.kitware.jobserver-1/ninja-1.10.0.gfb670.kitware.jobserver-1_x86_64-linux-gnu.tar.gz
-RUN tar -xzvf ninja-1.10.0.gfb670.kitware.jobserver-1_x86_64-linux-gnu.tar.gz
-ENV PATH="/ninja-1.10.0.gfb670.kitware.jobserver-1_x86_64-linux-gnu:${PATH}"
+# Leak suppression
+COPY lsan.supp /opt
+ENV LSAN_OPTIONS=suppressions=/opt/lsan.supp
 
-# install cmake
-RUN wget https://github.com/Kitware/CMake/releases/download/v3.17.0/cmake-3.17.0-Linux-x86_64.tar.gz
-RUN tar -xzvf cmake-3.17.0-Linux-x86_64.tar.gz
-ENV PATH="/cmake-3.17.0-Linux-x86_64/bin:${PATH}"
-
+# Make sure CMake finds the HIP/ROCm CMake configuration files
+ENV CMAKE_PREFIX_PATH /opt/rocm
