gha: include rocm build env

--- a/.github/workflows/docker-build-env.yml
+++ b/.github/workflows/docker-build-env.yml
@@ -26,6 +26,10 @@ jobs:
             context: tools/docker
             file: Dockerfile.build-env-latest-gcc
             registry: ghcr.io
+          - docker_image: ghcr.io/cp2k/dbcsr-build-env-rocm
+            context: tools/docker
+            file: Dockerfile.build-env-rocm
+            registry: ghcr.io
 
     steps:
       - name: Checkout Repository
