gha: try mounting the known hosts from the host

--- a/.github/workflows/doc-generation.yml
+++ b/.github/workflows/doc-generation.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/cp2k/dbcsr-build-env-ubuntu-20.04:develop
+      volumes:
+      - "/etc/ssh/ssh_known_hosts:/etc/ssh/ssh_known_hosts:ro"
 
     steps:
     - uses: actions/checkout@v2
