ocl: optionally/disabled kernel suitability based on BE-internal estimates
* Updated documentation (minor), and documented OPENCL_LIBSMM_SMM_PARAMS.
* Close file (if a file was specified by OPENCL_LIBSMM_SMM_PARAMS).
* Disabled suitability/performance estimates (OpenCL LIBSMM).
* Link libxsmmext library (libxsmm_gemm_batch_omp).
* Performance estimation (host and accelerator).
* Revised verbose output.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -161,6 +161,9 @@ set_target_properties(dbcsr PROPERTIES VERSION ${dbcsr_VERSION}
 
 if (USE_SMM MATCHES "libxsmm")
   target_compile_definitions(dbcsr PRIVATE __LIBXSMM)
+  if (USE_OPENMP)
+    target_link_libraries(dbcsr PRIVATE PkgConfig::LIBXSMMEXT)
+  endif ()
   target_link_libraries(dbcsr PRIVATE PkgConfig::LIBXSMM)
 endif ()
 
