--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,9 @@ endif ()
 # =================================== LIBXSMM (rely on pkg-config)
 if (USE_SMM MATCHES "libxsmm")
   find_package(PkgConfig REQUIRED)
+  if (USE_OPENMP)
+    pkg_check_modules(LIBXSMMEXT REQUIRED IMPORTED_TARGET GLOBAL libxsmmext)
+  endif ()
   pkg_check_modules(LIBXSMM REQUIRED IMPORTED_TARGET GLOBAL libxsmmf)
 endif ()
 
